# SENTINAL

./: .gitignore  Flash-AI_Technical-Design-Manual-(TDM)  README.md  TODO.md  build_sentinal.py  pyproject.toml
.github/workflows/: ci.yml  test-suite.yml  test.yaml
Docs/: Flash-AI_Technical-Design-Manual-(TDM)  SENTINAL_Implementation_Instructions.md
adk-server/sentinel-adk-server/: agent.py  server.py
scripts/: install.sh
sentinal/: cli.py  core.py
src/flash_ai/: __init__.py  engine.py  models.py  service.py
src/sentinal/: Completion-Report  __init__.py  adapters.py  adapters_py.py  chunker.py  chunker_py.py  chunking.py  cli.py  cli_py.py  config.py  config_py.py  core.py  doctor.py  doctor_py.py  embeddings.py  errors.py  errors_py.py  index.py  index_py (1).py  knowledge_base.py  logging_py.py  logging_utils.py  models.py  pipeline.py  pipeline_py.py  qa.py  sentinal_implementation.py  storage.py  storage_py.py  tests_py.py
src/sentry_admin/: core.py
tests/: test_cli.py  test_core.py  test_engine.py  test_sentinal_core.py  test_sentinal_pipeline_cli.py
