[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinal"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A low-resource system administration CLI for Linux desktop workflows."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sentinal = "sentinal.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
